--- a/Pantarevir/Base.lproj/Main.storyboard
+++ b/Pantarevir/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -365,6 +365,9 @@
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <inset key="contentEdgeInsets" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="REVIRKARTA"/>
+                                <connections>
+                                    <segue destination="dct-Hk-P9l" kind="show" identifier="fromMainMenuToMapSegue" id="Fqg-wP-Jis"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_karta" translatesAutoresizingMaskIntoConstraints="NO" id="Cjt-lg-d5v">
                                 <rect key="frame" x="530" y="273" width="53" height="50"/>
@@ -457,10 +460,10 @@
             </objects>
             <point key="canvasLocation" x="2280" y="-2408"/>
         </scene>
-        <!--View Controller-->
+        <!--Map View Controller-->
         <scene sceneID="h6J-i4-cIo">
             <objects>
-                <viewController id="dct-Hk-P9l" sceneMemberID="viewController">
+                <viewController id="dct-Hk-P9l" customClass="MapViewController" customModule="Pantarevir" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="XvS-Hu-JjI"/>
                         <viewControllerLayoutGuide type="bottom" id="I1h-VO-hFM"/>
@@ -468,8 +471,49 @@
                     <view key="view" contentMode="scaleToFill" id="FUd-mV-fh2">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="6B9-FN-7F4">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </mapView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="knS-Ch-Q8P">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="58"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cq5-XF-9gW">
+                                        <rect key="frame" x="8" y="24" width="26" height="26"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="26" id="ET6-l2-Y5y"/>
+                                            <constraint firstAttribute="width" constant="26" id="ukO-dq-Mqu"/>
+                                        </constraints>
+                                        <state key="normal" image="back_arrow copy">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="mFN-gL-Uup" kind="show" identifier="fromMapToMainMenuSegue" id="XSG-aJ-MqI"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="cq5-XF-9gW" firstAttribute="top" secondItem="knS-Ch-Q8P" secondAttribute="top" constant="24" id="16p-pT-z1l"/>
+                                    <constraint firstAttribute="height" constant="58" id="FQk-V9-daz"/>
+                                    <constraint firstItem="cq5-XF-9gW" firstAttribute="leading" secondItem="knS-Ch-Q8P" secondAttribute="leading" constant="8" id="Fmn-Ml-yTa"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="knS-Ch-Q8P" firstAttribute="trailing" secondItem="6B9-FN-7F4" secondAttribute="trailing" id="4TI-zS-l1Y"/>
+                            <constraint firstItem="6B9-FN-7F4" firstAttribute="top" secondItem="FUd-mV-fh2" secondAttribute="top" id="4x6-q2-Ya4"/>
+                            <constraint firstItem="knS-Ch-Q8P" firstAttribute="top" secondItem="6B9-FN-7F4" secondAttribute="top" id="6hH-zx-LXJ"/>
+                            <constraint firstItem="6B9-FN-7F4" firstAttribute="leading" secondItem="FUd-mV-fh2" secondAttribute="leading" id="NiN-x6-7TO"/>
+                            <constraint firstAttribute="trailing" secondItem="6B9-FN-7F4" secondAttribute="trailing" id="WFU-G8-Tdw"/>
+                            <constraint firstItem="knS-Ch-Q8P" firstAttribute="leading" secondItem="6B9-FN-7F4" secondAttribute="leading" id="e5w-7Y-UPn"/>
+                            <constraint firstItem="6B9-FN-7F4" firstAttribute="bottom" secondItem="I1h-VO-hFM" secondAttribute="top" id="nQq-gR-gsb"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="6B9-FN-7F4" id="cJZ-cd-2Cq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FfF-aI-c0c" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -629,7 +673,7 @@
                                 <rect key="frame" x="0.0" y="28" width="600" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Lzy-h3-bgV" id="beo-Qy-AkV">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="poppe" translatesAutoresizingMaskIntoConstraints="NO" id="P6d-zy-PuU">
@@ -943,6 +987,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="back_arrow copy" width="82" height="82"/>
         <image name="bg_gray" width="2362" height="1581"/>
         <image name="bg_moreblur" width="2362" height="1581"/>
         <image name="icon_din_statistik" width="792" height="792"/>
@@ -954,6 +999,6 @@
         <image name="poppe" width="77" height="77"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Yi9-HR-xPv"/>
+        <segue reference="XSG-aJ-MqI"/>
     </inferredMetricsTieBreakers>
 </document>
